# synch_de

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  main.R  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/reports_drafts/: step-ghuser-description.ipynb
notebooks/reports_drafts/script/: step-ghuser-description.py
notebooks/research_template/: README.md
reports/: Data Profile exam_responses.pkl.html  Data Profile practice_responses.pkl.html  Data Profile prior_insutrction_data.pkl.html  Data Profile processed_responses.pkl.html  Preprocessing Report for processed_responses.pkl.html
reports/acmart-primary/samples/: sample-acmcp.tex  sample-acmsmall-submission.fdb_latexmk  sample-acmsmall-submission.fls  sample-acmtog-conf.fdb_latexmk  sample-acmtog-conf.fls  sample-manuscript.tex
reports/basic_example/: main.tex
reports/synch_de_LAK25/: sample-base.bib  sample-manuscript.tex
synch_de/: __init__.py  config.py  dataset.py  features.py  plots.py
synch_de/dataset/: make_dataset.py  preprocess.py  read_data.py
synch_de/features/: education_level.py  exam.py  features.py  practice.py  prior_insutrction.py
synch_de/modeling/: main.R  main.Rmd  predict.py  train.py
tests/: __init__.py  config.py  test_dataset.py
